Project build fix

--- a/Anima.Core/Anima.Core.csproj
+++ b/Anima.Core/Anima.Core.csproj
@@ -5,6 +5,10 @@
     <RootNamespace>Core</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>../build</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
