--- a/NetworkPlugin/NetworkPlugin.csproj
+++ b/NetworkPlugin/NetworkPlugin.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <OutputPath>C:\Users\tobyl\Documents\Programming stuff\Anima-V4\Anima-V4\SimpleDriver\bin\Debug\</OutputPath>
+    <OutputPath>../build</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
