--- a/SimpleDriver/SimpleDriver.csproj
+++ b/SimpleDriver/SimpleDriver.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>../build</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\Anima.Core\Anima.Core.csproj" />
   </ItemGroup>
