Make Plugin create directories if they don't exist, and edit Test Plugin 3 to send things via the relay client

--- a/TestPlugin/TestPlugin.csproj
+++ b/TestPlugin/TestPlugin.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Anima.Core\Anima.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="NetworkCore">
+      <HintPath>..\..\Anima-V4-Server\NetworkCore\bin\Debug\net5.0\NetworkCore.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
