--- a/Anima.Core/Anima.Core.csproj
+++ b/Anima.Core/Anima.Core.csproj
@@ -9,6 +9,10 @@
     <OutputPath>../build</OutputPath>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>../build</OutputPath>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
